project(openCV)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 14)
find_package(OpenCV REQUIRED COMPONENTS core imgproc highgui)
add_executable(loadImage loadImage.cpp)
target_link_libraries(loadImage ${OpenCV_LIBS})
add_executable(cannyFilter cannyFilter.cpp cannyFilter.cpp.cpp)
target_link_libraries(cannyFilter ${OpenCV_LIBS})
add_executable(training01 training01.cpp)
target_link_libraries(training01 ${OpenCV_LIBS})
add_executable(training02 training02.cpp)
target_link_libraries(training02 ${OpenCV_LIBS})
